argoCD/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myapp
  labels:
    kubernetes.io/metadata.name: myapp
  annotations:
    argocd.argoproj.io/sync-wave: "1"
