argoCD/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-pod
  labels:
    app: website
namespace: myapp    
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 200m
        memory: 256Mi
