argoCD/services.yaml

apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: myapp
spec:
  type: NodePort
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
