argoCD/podtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: website-pod
  labels:
    app: website
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 200m
        memory: 256Mi

---------------------------------------------------------------------

services name : website-service
targetPort : 80
nodePort : 30080

apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: NodePort
  selector:
    app: website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080

----------------------------------------------------------------------

route name : website-route
host : www.example.com
targetPort : website-service

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: website-route
spec:
  host: www.example.com
  to:
    kind: Service
    name: website-service
    weight: 100
  port:
    targetPort: 80

-----------------------------------------------------------------------

configmap name : website-configmap
data:
  environment: Production
  version: v1.0

apiVersion: v1
kind: ConfigMap
metadata:
  name: website-configmap
data:
  environment: Production
  version: v1.0

-----------------------------------------------------------------------

secrets name : website-secrets
data:
  username: test
  password: test

apiVersion: v1
kind: Secret
metadata:
  name: website-secrets
type: Opaque
data:
  username: test
  password: test
