argoCD/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: website-route
namespace: myapp 
spec:
  host: www.example.com
  to:
    kind: Service
    name: website-service
    weight: 100
  port:
    targetPort: 80
